# StayUpToDo-Laundry

./: LICENSE  QUICKSTART.md  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  telegram_monitor.py
backend/logs/telegram_monitor/: README.md
backend/src/: __init__.py  app.py  storage.py
backend/src/models/: __init__.py  machine.py  status_history.py  telegram_message.py
backend/src/resources/: __init__.py  machine.py
backend/src/types/: __init__.py  enums.py
frontend/: .env.example  .gitignore  README.md  RUNNING.md  pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/kotlin/com/example/stay_up_to_do_laundry/: MainActivity.kt
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/lib/models/: machine.dart
frontend/lib/screens/: home_screen.dart
frontend/lib/services/: machine.dart
frontend/lib/widgets/: machine.dart
frontend/linux/: CMakeLists.txt
frontend/linux/runner/: my_application.cc
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/macos/Runner/Configs/: AppInfo.xcconfig
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
frontend/windows/runner/: Runner.rc  main.cpp
telegram-n8n/: README.md  SUTD Laundry Bot.json
