# pyproject.toml - basic packaging + mypy config that ignores import-untyped
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stayuptodo-laundry"
version = "0.1.0"
description = "Backend for StayUpToDo-Laundry"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
# target python version for type checking
python_version = "3.10"

# disable the "import-untyped" error code (mypy >= 0.9xx supports disabling error codes)
# use the singular key below; if your mypy version accepts plural, either form is harmless.
disable_error_code = ["annotation-unchecked", "import-not-found"]
